<resources>
    <string name="app_name">BlueCollar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hint_dob">Enter D.O.B (MM/DD/YYYY)</string>
    <string name="hint_password">Password</string>
    <string name="hint_gender">I am</string>
    <string name="jobSeeker">Job Seeker</string>
    <string name="employer">Employer</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>

    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login !!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up !</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="btn_link_to_signup">CREATE AN ACCOUNT</string>
    <string name="all_deleted">All Deleted !</string>
    <string name="are_you_sure">Want to Delete ??</string>
    <string name="dialog_single_button">Create</string>
    <string name="enter_listItem_text">Enter Item !!</string>
    <string name="title_activity_create_job_post"></string>
    <string name="failed_to_create_directory">Failed to create directory</string>
    <string name="you_are_successfully_registered">You are successfully registered</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="createUserWithEmail_onComplete">createUserWithEmail:onComplete:</string>
    <string name="picture_wasnt_taken">Picture was not taken!</string>
    <string name="onCancelled">onCancelled</string>
    <string name="under_the_construction">Under the construction...</string>
    <string name="action">Action</string>
    <string name="message">Message</string>
    <string name="job_title_required">Job title required</string>
    <string name="location_required">Location required</string>
</resources>
